compiler-core/src/parse/snapshots/gleam_core__parse__tests__no_eq_after_binding_snapshot_2.snap
---
source: compiler-core/src/parse/tests.rs
expression: "let wibble\n        wibble = 4"
snapshot_kind: text
---
----- SOURCE CODE
let wibble
        wibble = 4

----- ERROR
error: Syntax error
  ┌─ /src/parse/error.gleam:1:5
  │
1 │ let wibble
  │     ^^^^^^ I was expecting a '=' after this
